--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = "0.4.38"
 colog = "1.3.0"
 hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
 log = "0.4.22"
+regex = "1.10.6"
 serde = { version = "1.0", features = ["derive"] }
 strfmt = "0.2.4"
 toml = "0.8.19"
