--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 colog = "1.3.0"
-hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
+hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master", features = [
+    "silent",
+] }
 log = "0.4.22"
 regex = "1.10.6"
 serde = { version = "1.0", features = ["derive"] }
 strfmt = "0.2.4"
 toml = "0.8.19"
+xdg = "2.5.2"
