--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyprlux"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [dependencies]
@@ -14,5 +14,6 @@ notify = "6.1.1"
 regex = "1.10.6"
 serde = { version = "1.0", features = ["derive"] }
 strfmt = "0.2.4"
+sunrise = "1.0.1"
 toml = "0.8.19"
 xdg = "2.5.2"
