--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,4 +1,4 @@
-name: nix-check
+name: nix
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
   pull_request:
 
 jobs:
-  nix-check:
-    name: nix-check
+  nix:
+    name: check
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Alejandra
         uses: luisnquin/setup-alejandra@v1.0.0
       - name: Check formatting
-        run: alejandra --check */**/*.nix
+        run: alejandra --check .
       - name: Install nix action
         uses: cachix/install-nix-action@v20
         with:
