--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "hyprlux"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
 colog = "1.3.0"
-hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master", features = [
-    "silent",
-] }
+hyprland = "0.4.0-beta.1"
 log = "0.4.22"
 notify = "6.1.1"
 regex = "1.10.6"
