Add hot reload to config

--- a/examples/location_based.toml
+++ b/examples/location_based.toml
@@ -4,3 +4,5 @@ vibrance_configs = [
   { window_class = "firefox", window_title = "", strength = 100 },
   { window_class = "mplayer2", window_title = "Video Player", strength = 100 },
 ]
+
+hot_reload = true
