--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["hyprland", "vibrance", "night", "light", "flux"]
 
 [dependencies]
 chrono = "0.4.39"
-colog = "1.3.0"
+env_logger = "0.11.8"
 hyprland = "0.4.0-beta.2"
 log = "0.4.22"
 notify = "6.1.1"
