--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,16 @@ on:
         required: false
         default: '1'
         type: string
+      publish_crates:
+        description: 'Publish to crates.io'
+        required: false
+        default: true
+        type: boolean
+      publish_aur:
+        description: 'Publish to AUR'
+        required: false
+        default: true
+        type: boolean
 
 name: Publish
 
@@ -34,10 +44,12 @@ jobs:
       - name: Verify nix build works
         run: nix build
       - name: Publish to crates.io
+        if: ${{ github.event_name == 'push' || inputs.publish_crates }}
         run: nix develop -c cargo publish --token ${CARGO_REGISTRY_TOKEN}
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - name: Publish to AUR
+        if: ${{ github.event_name == 'push' || inputs.publish_aur }}
         run: |
           # Determine version and pkgrel
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
@@ -66,6 +78,7 @@ jobs:
         env:
           GITHUB_REF: ${{ github.ref }}
       - name: Deploy to AUR
+        if: ${{ github.event_name == 'push' || inputs.publish_aur }}
         uses: KSXGitHub/github-actions-deploy-aur@v4.1.1
         with:
           pkgname: hyprlux
